; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_activex.c_test_exec_script.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_activex.c_test_exec_script.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [31 x i8] c"get_parentWindow failed: %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"execScript failed: %08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*)* @test_exec_script to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_exec_script(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = call i64 @IHTMLDocument2_get_parentWindow(i32* %12, i32** %7)
  store i64 %13, i64* %11, align 8
  %14 = load i64, i64* %11, align 8
  %15 = load i64, i64* @S_OK, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = load i64, i64* %11, align 8
  %19 = call i32 @ok(i32 %17, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i64 %18)
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @a2bstr(i8* %20)
  store i32 %21, i32* %8, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @a2bstr(i8* %22)
  store i32 %23, i32* %9, align 4
  %24 = load i32*, i32** %7, align 8
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %9, align 4
  %27 = call i64 @IHTMLWindow2_execScript(i32* %24, i32 %25, i32 %26, i32* %10)
  store i64 %27, i64* %11, align 8
  %28 = load i64, i64* %11, align 8
  %29 = load i64, i64* @S_OK, align 8
  %30 = icmp eq i64 %28, %29
  %31 = zext i1 %30 to i32
  %32 = load i64, i64* %11, align 8
  %33 = call i32 @ok(i32 %31, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i64 %32)
  %34 = load i32, i32* %9, align 4
  %35 = call i32 @SysFreeString(i32 %34)
  %36 = call i32 @VariantClear(i32* %10)
  %37 = load i32*, i32** %7, align 8
  %38 = call i32 @IHTMLWindow2_Release(i32* %37)
  ret void
}

declare dso_local i64 @IHTMLDocument2_get_parentWindow(i32*, i32**) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i32 @a2bstr(i8*) #1

declare dso_local i64 @IHTMLWindow2_execScript(i32*, i32, i32, i32*) #1

declare dso_local i32 @SysFreeString(i32) #1

declare dso_local i32 @VariantClear(i32*) #1

declare dso_local i32 @IHTMLWindow2_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
